páDagina inicial finalizada

--- a/sass/molecules/_mixins.sass
+++ b/sass/molecules/_mixins.sass
@@ -3,7 +3,7 @@
 $preto: #000
 $branco: white
 $azul: #31b1e7
-$azul-claro: #cadbdc
+$azul-claro: #c4d4d9
 $laranja: orange
 $verde: #9ad15e
 $cinza-claro: #e1e1e1
