--- a/sass/geral.sass
+++ b/sass/geral.sass
@@ -1,14 +1,10 @@
 @import molecules/mixins
+@import molecules/reset
 
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins
 
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 
-@import ../bower_components/sass-flex-mixin/flex
-
-@import atoms/botao
-
-@import molecules/botoes
-
-@import templates/home
+@import organisms/header
+@import organisms/footer
