criando pagina sobre

--- a/sass/templates/_home.sass
+++ b/sass/templates/_home.sass
@@ -1,1 +1,11 @@
 @import ../organisms/sobre
+@import ../molecules/textos
+
+header
+	background:
+		image: url('../imagens/foto-slide-pagina-inicial.jpg')
+		size: cover
+		position: top center
+		repeat: no-repeat
+		//attachment: fixed
+		color: $preto
