--- a/sass/sobre.sass
+++ b/sass/sobre.sass
@@ -5,4 +5,8 @@
 
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 
+@import atoms/botao
+
+@import molecules/botoes
+
 @import templates/sobre
