pagina sobre finalizada

--- a/sass/templates/_sobre.sass
+++ b/sass/templates/_sobre.sass
@@ -1,7 +1,7 @@
 @import ../molecules/textos
+@import ../organisms/habilidades
 
 header
-	min-height: 475px
 	margin: 0 0 25px
 
 	background:
@@ -13,4 +13,5 @@ header
 
 .botao
 	display: table
-	margin: 0 auto
+	margin: 30px auto
+	clear: both
