--- a/sass/templates/_portifolio.sass
+++ b/sass/templates/_portifolio.sass
@@ -8,6 +8,10 @@ header
 		repeat: no-repeat
 		color: $preto
 
+h1
+	+breakpoint($celular)
+		font-size: 22px !important
+
 .portifolio
 	ul
 		+clearfix
