--- a/sass/contato.sass
+++ b/sass/contato.sass
@@ -5,4 +5,9 @@
 
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 
+@import atoms/botao
+
+@import molecules/botoes
+
+
 @import templates/contato
