--- a/sass/sobre.sass
+++ b/sass/sobre.sass
@@ -5,6 +5,8 @@
 
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 
+@import organisms/menu-responsivo
+
 @import atoms/botao
 
 @import molecules/botoes
